Make new draft post and fix alignment problem for anchors in footer

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -85,7 +85,7 @@ body {
 		background-color: black;
 		position: absolute;
 		width: 100%;
-		height: 50px;
+		height: 100px;
 		bottom: 0;
 		//justify-content: center;
 		align-items: center;
@@ -94,6 +94,7 @@ body {
 		a {
 			padding-left: 15px;
 			color: white;
+			height: 30px;
 		}
 	}
 	
@@ -127,7 +128,7 @@ body {
 		justify-content: center;
 		overflow: scroll;
 		margin-top: 50px;
-		margin-bottom: 50px;
+		margin-bottom: 100px;
 	}
 
 	/* UNIVERSAL CODE BLOCK SETTINGS */
